Minor depreciation fixes and adjustments.